--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginHorizontal="8dp"
+        android:layout_marginHorizontal="24dp"
         android:layout_marginVertical="24dp">
 
         <Button
@@ -58,5 +58,31 @@
             android:backgroundTint="@color/orange"
             app:cornerRadius="50dp" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Count name:"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:layout_marginHorizontal="24dp" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:textSize="48sp"
+        android:textColor="@color/black"
+        android:layout_marginHorizontal="24dp"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save count name"
+        android:textSize="24sp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/green"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="12dp"/>
 
 </LinearLayout>
