--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_height="match_parent"
             android:text="+1"
             android:layout_weight="1"
-            android:textSize="32sp"
+            android:textSize="24sp"
             app:cornerRadius="50dp"
             android:backgroundTint="@color/green" />
 
@@ -44,7 +44,7 @@
             android:layout_weight="1"
             android:layout_marginHorizontal="32dp"
             android:text="-1"
-            android:textSize="32sp"
+            android:textSize="24sp"
             app:cornerRadius="50dp"
             android:backgroundTint="@color/red" />
 
@@ -54,7 +54,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:text="Clear"
-            android:textSize="32sp"
+            android:textSize="24sp"
             android:backgroundTint="@color/orange"
             app:cornerRadius="50dp" />
     </LinearLayout>
@@ -64,18 +64,20 @@
         android:layout_height="wrap_content"
         android:text="Count name:"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="32sp"
         android:layout_marginHorizontal="24dp" />
+
     <EditText
+        android:id="@+id/EditText_CountName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:textSize="48sp"
-        android:textColor="@color/black"
         android:layout_marginHorizontal="24dp"
-        />
+        android:background="@color/white"
+        android:textColor="@color/black"
+        android:textSize="32sp" />
 
     <Button
+        android:id="@+id/btn_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save count name"
